# udtube

./: README.md  datamodules.py  pyproject.toml  requirements.txt  udtube.bib  udtube.py
.circleci/: config.yml
configs/: ewt_bert.yaml  ewt_distilbert.yaml  ewt_roberta.yaml  syntagrus_mbert.yaml  syntagrus_rubert.yaml  syntagrus_xlm-roberta.yaml
examples/wandb_sweeps/: README.md  sweep.py
examples/wandb_sweeps/configs/: ewt_grid.yaml  gdt_grid.yaml  syntagrus_grid.yaml
scripts/: run_queries.py
testing/: make_small_dataset.py
testing/datasets/: el_gdt-ud-toy.conllu  en_ewt-ud-toy.conllu  ru_syntagrus-ud-toy.conllu
tests/: conllu_test.py  control_test.py  length_test.py  metrics_test.py  test_udtube.py  udtube_test.py
tests/datasets/baseline_predictions/: el_baseline_pred.conllu  en_baseline_pred.conllu  ru_baseline_pred.conllu
tests/records/configs/: el_config.yaml  en_config.yaml  fit_config.yaml  ru_config.yaml
tests/testdata/: README.md  en_expected.test  length_config.yaml  regenerate  ru_expected.test  udtube_config.yaml
udtube/: __init__.py  callbacks.py  cli.py  defaults.py  metrics.py  models.py  modules.py  parser.py  special.py
udtube/data/: batches.py  collators.py  conllu.py  datamodules.py  datasets.py  indexes.py  logits.py  mappers.py
