[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools]
include-package-data = false

[project]
name = "udtube"
version = "0.1.1"
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.9,<=3.13"
authors = [
    { name = "Daniel Yakubov", email = "danielyak98@gmail.com" },
    { name = "Kyle Gorman", email = "kylebgorman@gmail.com" },
]
keywords = [
    "computational linguistics",
    "morphology",
    "natural language processing",
    "language",
]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "jsonargparse[signatures]>=4.28.0,<5.0.0",
    "lightning>=2.4.0,<3.0.0",
    "pyyaml>=6.0,<7.0",
    "transformers>=4.44.0,<5.0.0",
    "torch>=2.4.0,<3.0.0",
    "torchmetrics>=1.4.0.post0,<2.0.0",
    "wandb>=0.18.0,<1.0.0",
]

[tool.poetry]
include = ["udtube*"]
exclude = ["configs*",  "examples*", "scripts*" ]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
build = "^1.2.1"
flake8 = "^7.1.0"
twine = "^6.1.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
parameterized = "^0.9.0"
pytest = "^7.4.4"

[tool.poetry.scripts]
udtube = "udtube.cli:main"

[project.urls]
homepage = "https://github.com/CUNY-CL/udtube"
