[project]
name = "udtube"
version = "0.1.5"
description = "Neural morphological analysis"
license = { text = "Apache 2.0" }
readme = "README.md"
requires-python = ">=3.10,<3.14"
authors = [
    { name = "Daniel Yakubov", email = "danielyak98@gmail.com" },
    { name = "Kyle Gorman", email = "kylebgorman@gmail.com" },
]
keywords = [
    "computational linguistics",
    "morphology",
    "natural language processing",
    "language",
]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "accelerate==1.8.1",
    "jsonargparse[signatures]>=4.40.0,<5.0.0",
    "numpy<=2.3.1",
    "pytorch-lightning==2.5.2",
    "pyyaml>=6.0.2,<7.0.0",
    "transformers==4.53.2",
    "torch==2.7.1",
    "torchmetrics==1.7.4",
    "wandb>=0.18.0,<1.0.0",
]
[build-system]
requires = ["setuptools >= 72.1.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
homepage = "https://github.com/CUNY-CL/udtube"

[tool.setuptools.packages.find]
include = ["udtube*"]
exclude = ["configs*", "examples*", "scripts*"]

[project.scripts]
udtube = "udtube.cli:main"

[tool.setuptools]
include-package-data = false
